--- a/lists/c2.md
+++ b/lists/c2.md
@@ -10,3 +10,5 @@ Link | Description
 [Rapid Attack Infrastructure](https://github.com/obscuritylabs/RAI) | Red Team Infrastructure... Quick... Fast... Simplified
 [Trusted Sec's Trever](https://github.com/trustedsec/trevorc2) | TrevorC2 is a client/server model for masking command and control through a normally browsable website. Detection becomes much harder as time intervals are different and does not use POST requests for data exfil.
 [PoshC2 Python](https://github.com/nettitude/PoshC2_Python/) | PoshC2 is a proxy aware C2 framework that utilises Powershell and/or equivalent (System.Management.Automation.dll) to aid penetration testers with red teaming, post-exploitation and lateral movement
+[Covenant](https://github.com/cobbr/Covenant) | Covenant is a .NET command and control framework that aims to highlight the attack surface of .NET, make the use of offensive .NET tradecraft easier, and serve as a collaborative command and control platform for red teamers.
+
